# tirvish_rs

./: .gitattributes  Cargo.toml  OPTIMIZATIONS.md  README.md
src/: encode.rs  lib.rs  main.rs  maxpairs.rs  params.rs  pipeline.rs  sa.rs  seeds.rs  similarity.rs  tsd.rs  twobit.rs  xdrop.rs
testdata/: README.md  gff_to_tsv.py  parse_tirvish.py  run_compare.sh
